# 1212mms

./: AUTHORS  Makefile.in  README.md  configure  configure.ac  mbuni-config.h.in
autotools/: Makefile.in
doc/: Makefile.in  userguide.shtml
doc/examples/: Makefile.in  mmsbox.conf
doc/images/: Makefile.in
extras/: Makefile.in
extras/mmsbox-mm1/: Makefile.in  mmsbox_mm1.c
extras/pgsql-queue/: Makefile.in  mms_pgsql_queue.c
mmlib/: Makefile.am  Makefile.in  charmibenum.def  mms_cfg.c  mms_cfg.def  mms_cfg.h  mms_eventlogger.h  mms_mm7soap.c  mms_mm7soap.h  mms_msg.c  mms_msg.h  mms_queue.c  mms_queue.h  mms_util.c  mms_util.h
mmsbox/: Makefile.am  Makefile.in  bearerbox.c  dlr.c  mmsbox.c  mmsbox.h  mmsbox_cdr.c  mmsbox_cfg.c  mmsbox_cfg.h
mmsc/: Makefile.am  Makefile.in  mms_billing_shell.c  mmsc_cfg.c  mmsc_cfg.h  mmsfromemail.c  mmsglobalsender.c  mmsrelay.c
